Managed all modules

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,25 @@
 include/README
 lib/README
 test/README
+lib/Arduino-Temperature-Control-Library-master/.gitignore
+lib/Arduino-Temperature-Control-Library-master/DallasTemperature.cpp
+lib/Arduino-Temperature-Control-Library-master/README.md
+lib/Arduino-Temperature-Control-Library-master/DallasTemperature.h
+lib/Arduino-Temperature-Control-Library-master/library.json
+lib/Arduino-Temperature-Control-Library-master/library.properties
+lib/Arduino-Temperature-Control-Library-master/keywords.txt
+lib/Arduino-Temperature-Control-Library-master/examples/Alarm/Alarm.pde
+lib/Arduino-Temperature-Control-Library-master/examples/AlarmHandler/AlarmHandler.pde
+lib/Arduino-Temperature-Control-Library-master/examples/ExternalPullup/ExternalPullup.ino
+lib/Arduino-Temperature-Control-Library-master/examples/Multibus_simple/Multibus_simple.ino
+lib/Arduino-Temperature-Control-Library-master/examples/Multiple/Multiple.pde
+lib/Arduino-Temperature-Control-Library-master/examples/SetUserData/SetUserData.ino
+lib/Arduino-Temperature-Control-Library-master/examples/Simple/Simple.pde
+lib/Arduino-Temperature-Control-Library-master/examples/Tester/Tester.pde
+lib/Arduino-Temperature-Control-Library-master/examples/Single/Single.pde
+lib/Arduino-Temperature-Control-Library-master/examples/TwoPin_DS18B20/TwoPin_DS18B20.ino
+lib/Arduino-Temperature-Control-Library-master/examples/UserDataDemo/UserDataDemo.ino
+lib/Arduino-Temperature-Control-Library-master/examples/UserDataWriteBatch/UserDataWriteBatch.ino
+lib/Arduino-Temperature-Control-Library-master/examples/WaitForConversion/WaitForConversion.pde
+lib/Arduino-Temperature-Control-Library-master/examples/WaitForConversion2/WaitForConversion2.pde
+lib/Arduino-Temperature-Control-Library-master/examples/oneWireSearch/oneWireSearch.ino
