--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:digispark-pro]
+[env:digispark-tiny]
 platform = atmelavr
-board = digispark-pro
+board = digispark-tiny
 framework = arduino
 
 upload_port = COM12
+
 
